# 2D_Rot_Generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generator.cpp
include/: contrast.h  triangle.h  utils.h
shaders/: simpleFragShader.glsl  simpleVertShader.glsl
src/: contrast.cpp  triangle.cpp  utils.cpp
